--- a/css/css.css
+++ b/css/css.css
@@ -1,4 +1,4 @@
-﻿.ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{background-image:url('bg.png');}
+.ui-overlay-a, .ui-page-theme-a, .ui-page-theme-a .ui-panel-wrapper{background-image:url('bg.png');}
 .ui-page-theme-a .ui-btn, html .ui-bar-a .ui-btn, html .ui-body-a .ui-btn, html body .ui-group-theme-a .ui-btn, html head+body .ui-btn.ui-btn-a, .ui-page-theme-a .ui-btn:visited, html .ui-bar-a .ui-btn:visited, html .ui-body-a .ui-btn:visited, html body .ui-group-theme-a .ui-btn:visited, html head+body .ui-btn.ui-btn-a:visited{background:transparent;}
 body {margin:0px;padding:0px;}
 #wrapper{width:100%;height:600px;margin-left:auto;margin-right:auto}
@@ -16,7 +16,6 @@ width:640px;
 padding:30px;
 font-size:24px;
 color:#fff;
-
 }
 
 #title
