--- a/css/css.css
+++ b/css/css.css
@@ -6,6 +6,9 @@ body {margin:0px;padding:0px;}
 #gallery{width:100%;height:300px;float:left;overflow:hidden;}
 .utube{background-color:white;box-shadow:black 0px 0px 20px;width:100%;height:280px;float:left;overflow:hidden;}
 a{text-decoration:none;}
+#pnlHeader{background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px;margin-bottom:50px;margin-top:-30px;}
+#head{background-color: #0071bc;border:2px #0071bc solid;box-shadow:black 0px 0px 20px}
+#credits{height: 30px; width: 100%; background-color: #0071bc; position: relative;text-align:center;font-size:20px;font-family:Candara;color:white;box-shadow:black 0px 0px 10px}
 .result
 {
 min-height:400px;
